# BudgetManager

./: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements2.txt
.docker/: Dockerfile  docker-compose.yml
.ebextensions/: django.config
.github/workflows/: bm-ci.yml  budget-manager-ci.yml
adrs/: 0000-TEMPLATE.md  0001-use-ruff-black-and-precommit-hooks-to-enfore-python-codestyle.md  0002-functional-requirements.md  0003-functional-changes.md  0004-use-bandit-and-safety-in-github-actions-to-check-security-issues-and-dependency-vulnerability.md
api/: serializers.py  urls.py  views.py
api/tests/: test_serializers.py  test_urls.py  test_views.py
base/: .env.dist  settings.py  urls.py
budget_manager/: ci_db  package-lock.json  tailwind.config.js  test_csv_file.csv
budget_manager/api/: serializers.py  urls.py  views.py
budget_manager/base/: .env.dist  asgi.py  settings.py  urls.py  wsgi.py
budget_manager/budget_manager/: asgi.py  settings.py  urls.py  wsgi.py
budget_manager/budget_manager_app/: admin.py  apps.py  choices.py  decorators.py  factories.py  filters.py  forms.py  models.py  signals.py  styles.py  urls.py  views.py
budget_manager/csv_files/: apps.py  bank_csv_parsers.py  forms.py  models.py  urls.py  views.py
budget_manager/expenses/: admin.py  factories.py  filters.py  forms.py  models.py  urls.py  views.py
budget_manager/file_parsers/: factories.py  forms.py  models.py  urls.py  views.py
budget_manager/helper_models/: apps.py  factories.py  filters.py  forms.py  models.py  urls.py  views.py
budget_manager/incomes/: admin.py  factories.py  filters.py  forms.py  models.py  urls.py  views.py
budget_manager/saving_goals/: apps.py  factories.py  forms.py  models.py  (+2 more)
budget_manager_app/: admin.py  apps.py  consts.py  decorators.py  factories.py  forms.py  models.py  signals.py  urls.py  views.py
expenses/: factories.py  filters.py  forms.py  models.py  urls.py  views.py
file_parsers/: apps.py  factories.py  urls.py  views.py
helper_models/: factories.py  filters.py  forms.py  models.py  urls.py  views.py
incomes/: factories.py  filters.py  forms.py  models.py  urls.py  views.py
saving_goals/: factories.py  forms.py  models.py  urls.py  views.py
static/: staticfiles.json
templates/: _base.html
users/: factories.py  forms.py  urls.py  views.py
(+285 files in other folders)
