[tool.poetry]
name = "budget-manager"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg2-binary = "2.9.9"
django-compressor = "4.4"
django-filter = "23.5"
djangorestframework = "3.14.0"
everapi = "0.1.1"
freecurrencyapi = "0.1.0"
pandas = "2.2.0"
plotly = "5.18.0"
numpy = "1.26.4"
pytesseract = "0.3.10"
xhtml2pdf = "0.2.15"
matplotlib = "3.8.2"
django-environ = "0.11.2"
django-axes = "6.3.0"
django-storages = "^1.14.2"
boto3 = "^1.34.49"

[tool.poetry.group.dev.dependencies]
coverage = "7.4.0"
django-debug-toolbar = "4.2.0"
django-silk = "5.0.4"
factory-boy = "3.3.0"
pre-commit = "3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
